sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:28:52 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=162 varID=255 objID=dummy
.. Answered with error to command (162), [description: Get TLS Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
